@@ -11,6 +11,7 @@ Changes log
    "makensis" executable with NSIS 2.28.
  - Clarified Javadocs for Directory about the modification mode. Suggested by Chuck Hinson.
  - Clarified Javadocs for OutputRepresentation. Suggested by Jon Lachelt.
+ - Fixed potential NPE in DomRepresentation.write() method. Reported by Dan Fitzgerald.
 
 [Enhancements] 
  - 
